--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,15 @@ android {
         }
     }
     buildTypes {
+
+        debug {
+            buildConfigField("String", "FCR_ACCOUNT", "\"anna.emulator@gmail.com\"")
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "FCR_ACCOUNT", "\"anna.emulator@gmail.com\"")
         }
     }
 
