--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ ext {
     rxbinding_version = "2.2.0"
     lifecycle_version = "1.1.1"
     room_version = "1.1.1"
-    glide_version = "4.7.1"
+    picasso_version = "2.71828"
     play_services_auth = "16.0.1"
     google_drive_api = "v3-rev54-1.22.0"
     google_api_client_android = "1.22.0"
@@ -55,6 +55,7 @@ ext {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:support-v4:$support_version"
     implementation "com.android.support:design:$support_version"
@@ -88,9 +89,8 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
     implementation "android.arch.persistence.room:rxjava2:$room_version"
 
-    // Glide
-    implementation "com.github.bumptech.glide:glide:$glide_version"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+    //Picasso
+    implementation "com.squareup.picasso:picasso:$picasso_version"
 
     // Google Sign In
     implementation "com.google.android.gms:play-services-auth:$play_services_auth"
